--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "graphql-tools": "^6.0.9",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
+    "regenerator-runtime": "^0.13.7",
     "subscriptions-transport-ws": "^0.9.16",
     "ts-node": "^8.10.2"
   },
