--- a/package.json
+++ b/package.json
@@ -32,15 +32,10 @@
   },
   "homepage": "https://github.com/Akryum/vue-cli-plugin-apollo#readme",
   "dependencies": {
+    "@apollo/client": "^3.2.5",
     "apollo": "^2.28.2",
     "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
-    "apollo-link-context": "^1.0.20",
-    "apollo-link-http": "^1.5.17",
-    "apollo-link-persisted-queries": "^0.2.2",
     "apollo-link-state": "^0.4.2",
-    "apollo-link-ws": "^1.0.20",
     "apollo-server-express": "^2.14.2",
     "apollo-upload-client": "^13.0.0",
     "apollo-utilities": "^1.3.4",
